force-app/main/default/objects/Help_Topic__mdt/Help_Topic__mdt.object-meta.xml
<CustomObject>
    <description>Stores topics for help page to auto-populate case type, case description and contain links to knowledge articles.</description>
    <label>Help Topic</label>
    <pluralLabel>Help Topics</pluralLabel>
</CustomObject>