force-app/main/default/objects/Help_Topic__mdt/fields/CaseDescription__c.field-meta.xml
<CustomField>
    <fullName>CaseDescription__c</fullName>
    <label>CaseDescription</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>