force-app/main/default/objects/Help_Topic__mdt/fields/CasePriority__c.field-meta.xml
<CustomField>
    <fullName>CasePriority__c</fullName>
    <label>CasePriority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>