force-app/main/default/objects/Help_Topic__mdt/fields/CaseReason__c.field-meta.xml
<CustomField>
    <fullName>CaseReason__c</fullName>
    <label>CaseReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>