force-app/main/default/objects/Help_Topic__mdt/fields/CaseSubject__c.field-meta.xml
<CustomField>
    <fullName>CaseSubject__c</fullName>
    <label>CaseSubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>