force-app/main/default/objects/Help_Topic__mdt/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>CaseType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>