force-app/main/default/objects/Help_Topic__mdt/fields/Description_Placeholder_Label__c.field-meta.xml
<CustomField>
    <fullName>Description_Placeholder_Label__c</fullName>
    <label>Description Placeholder Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>