force-app/main/default/objects/Help_Topic__mdt/fields/Display_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Name_Label__c</fullName>
    <label>Display Name Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>