force-app/main/default/objects/Help_Topic__mdt/fields/Display_Solution_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Solution_Label__c</fullName>
    <label>Display Solution Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>