force-app/main/default/objects/Help_Topic__mdt/fields/Knowledge_Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Link__c</fullName>
    <label>Knowledge Article Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>