force-app/main/default/objects/Help_Topic__mdt/fields/Submit_Required__c.field-meta.xml
<CustomField>
    <fullName>Submit_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Submit Required</label>
    <type>Checkbox</type>
</CustomField>