force-app/main/default/objects/Help_Topic__mdt/fields/User_Communities__c.field-meta.xml
<CustomField>
    <fullName>User_Communities__c</fullName>
    <label>User Communities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>