force-app/main/default/objects/Help_Topic__mdt/fields/User_Description_Required__c.field-meta.xml
<CustomField>
    <fullName>User_Description_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Description Required</label>
    <type>Checkbox</type>
</CustomField>