force-app/main/default/objects/Help_Topic__mdt/fields/User_Types__c.field-meta.xml
<CustomField>
    <fullName>User_Types__c</fullName>
    <label>User Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>